--- a/style.css
+++ b/style.css
@@ -1,332 +1,412 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 70px 0 0 0;
-    box-sizing: border-box;
-    color: #333;
-    background-color: #F9F7F7;
-}
+*{
 
+   box-sizing: border-box;
+}
+body {
+  font-family: Arial, sans-serif;
+  margin: 70px 0 0 0;
+  padding: 0;
+
+  color: #333;
+  background-color: #f9f7f7;
+} 
+   
+/* navigation  */
 nav {
-    height: 70px;
-    top: 0;
-    background: #3F72AF;
-    color: #F9F7F7;
-    position: fixed;
-    width: 100%;
-    z-index: 1000;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    box-shadow: 0 2px 5px rgba(84, 126, 168, 0.5);
+  height: 70px;
+  top: 0;
+  background: #dbe2ef;
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0 2px 5px rgba(84, 126, 168, 0.5);
 }
 
 nav .logo img {
-    width: 60px;
-    padding-left: 10px;
+  width: 70px;
+  height: 100%;
+  padding-left: 10px;
 }
 
 nav ul {
-    list-style: none;
-    display: flex;
-    padding: 0;
-    margin: 0;
+  list-style: none;
+  display: flex;
+  padding: 0;
+  margin: 0;
 }
 
 nav ul li {
-    margin: 0 15px;
+  margin: 0 15px;
 }
-
-nav ul li a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 1rem;
-    transition: color 0.3s;
-}
-
-nav ul li a:hover {
-    color: #112D4E;
-}
-
-
-
-
 
 nav .contact-info button {
-    background: #112D4E;
-    border: none;
-    margin-right: 10px;
-    padding: 10px 20px;
-    color: #F9F7F7;
-    cursor: pointer;
-    border-radius: 5px;
-    font-size: 1rem;
-    transition: background-color 0.3s;
+  background: #ef6602;
+  border: none;
+  margin-right: 10px; 
+  padding: 10px 20px;
+  color: #154161;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 1rem;
+   transition: background-color 0.3s;
 }
 
 nav .contact-info button:hover {
-    background: #234266;
+  background: #db5c01;
 }
 
+
+
+nav ul li a {
+    color: #154161;
+    text-decoration: none;
+    font-size: 1.1rem;
+    transition: color 0.3s, text-decoration 0.3s;  /* Include text-decoration in the transition for smooth effect */
+    padding-bottom: 2px;  /* Provides spacing for the underline */
+    position: relative;  /* Establishes the position context for the pseudo-element */
+}
+
+ nav ul li a:hover {
+    color: #154161;
+    text-decoration: none;  /* Ensures that no default text underline is applied */
+}  
+
+/* Add after pseudo-element for the underline effect on hover */
+nav ul li a:hover:after {
+    content: '';  /* Necessary to generate the box */
+    position: absolute;
+    bottom: 0;  /* Aligns the pseudo-element at the bottom of the link */
+    left: 0;
+    width: 100%;  /* Ensures the underline covers the full width of the text */
+    height: 2px;  /* Height of the underline */
+    background-color: #ef6602;  /* Color of the underline */
+    transition: width 0.3s;  /* Smooth transition for the underline */
+}
+
+
+/* Nothing To do Above  */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Header  */
 header .hero {
-    background: url('images/silder2.jpg') no-repeat center center/cover;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    color: #fff;
-    text-shadow: 1px 1px 2px #000;
-    
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("images/silder2.jpg") no-repeat center center/cover;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  color: #fff;
 }
 
 header .hero .overlay {
-background-color: rgba(80, 142, 204, 0.5);
-text-align: center;
-height: 100%;
-width: 100%;
-display: flex;
-justify-content: center;
-align-items: center;
-flex-direction: column; /* Add this line to ensure the content is stacked vertically */
+  background-color: rgba(72, 94, 109, 0.8);
+  text-align: center;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column; 
 }
 
-
 header .overlay h1 .underline {
-position: relative;
-display: inline-block;
-color: #ffcc00;;
+  position: relative;
+  display: inline-block;
+  font-weight: bold;
+  color: #154161; /* Brighten up the text color for contrast */
 }
 
 header .overlay h1 .underline::after {
-content: '';
-position: absolute;
-left: 0;
-bottom: -5px; /* Adjust as needed */
-width: 100%;
-height: 4px; /* Adjust as needed */
-background: linear-gradient(90deg, rgba(255,0,150,1) 0%, rgba(0,204,255,1) 100%);
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -10px;
+  width: 0%; /* Start with no underline visible */
+  height: 4px; /* Thicker underline */
+  background-color: #ef6602; /* Orange color for underline */
+  transition: width 0.5s ease; /* Smooth transition for the underline */
 }
 
+header .overlay h1 .underline:hover::after {
+  width: 100%; /* Underline grows to full width on hover */
+}
 
 header .hero .overlay h1 {
-    font-size: 3rem;
-    margin: 0;
+  font-size: 3rem;
+  margin: 0;
+  transition: color 0.3s ease; /* Smooth color transition */
 }
 
 header .hero .overlay p {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
 }
 
 header .hero .cta-buttons {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 header .hero .cta-buttons .btn {
-    background-color: #ffcc00;
-    color: #004080;
-    padding: 10px 20px;
-    text-decoration: none;
-    border-radius: 5px;
-    margin: 5px;
-    transition: background-color 0.3s;
+  background-color: #154161; /* Dark blue for buttons */
+  color: #fff; /* White text for better readability */
+  padding: 10px 20px;
+  text-decoration: none;
+  border-radius: 5px;
+  margin: 5px;
+  transition: background-color 0.3s, transform 0.3s; /* Added transform to transition properties */
 }
 
 header .hero .cta-buttons .btn:hover {
-    background-color: #ff9900;
+  background-color: #ef6602; /* Orange color on hover */
+  transform: translateY(-2px); /* Slight lift effect on hover */
 }
 
-.container {
-    width: 80%;
-    margin: auto;
-    padding: 40px 0;
-}
 
-section h2 {
-    font-size: 2.5rem;
+
+  .container h2 {
     text-align: center;
-    margin-bottom: 20px;
-    color: #004080;
-}
+  }
 
-/* #introduction p {
-    font-size: 1.2rem;
-    line-height: 1.6;
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-#introduction .link {
-    display: block;
-    text-align: center;
-    margin-top: 20px;
-    font-size: 1.2rem;
-    color: #004080;
-    text-decoration: none;
-    transition: color 0.3s;
-}
-
-#introduction .link:hover {
-    color: #ff9900;
-} */
-
-
-.about {
-padding: 40px 20px;
-background-color: #f8f8f8;
-text-align: center;
-}
-
-.about-container {
-display: flex;
-flex-wrap: wrap;
-align-items: center;
-justify-content: center;
-max-width: 1200px;
-margin: 0 auto;
-}
-
-.about-text {
-flex: 1;
-min-width: 300px;
-max-width: 600px;
-padding: 20px;
-text-align: left;
-}
-
-.about-text h2 {
-font-size: 2.5em;
-margin-bottom: 10px;
-}
-
-.about-text h3 {
-font-size: 1.5em;
-color: #666;
-margin-bottom: 20px;
-}
-
-.about-text p {
-font-size: 1em;
-color: #333;
-line-height: 1.6;
-margin-bottom: 20px;
-}
-
-.about-text button {
-background-color: #333;
-color: white;
-padding: 10px 20px;
-border: none;
-cursor: pointer;
-font-size: 1em;
-}
-
-.about-text button:hover {
-background-color: #555;
-}
-
-.about-image {
-flex: 1;
-min-width: 300px;
-max-width: 600px;
-padding: 20px;
-}
-
-.about-image img {
-width: 100%;
-border-radius: 10px;
-}
-
-.social-media {
-margin-top: 20px;
-}
-
-.social-media a {
-margin: 0 10px;
-display: inline-block;
-font-size: 2em;
-}
-
-
-/* 
-
-#services-overview .services {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-
-#services-overview .service {
-    flex-basis: 30%;
-    margin: 10px 0;
-    text-align: center;
-    background: #fff;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
-
-#services-overview .service img {
-    width: 100%;
-    height: auto;
-    border-radius: 5px;
-}
-
-#services-overview .service h3 {
-    font-size: 1.5rem;
-    margin: 10px 0;
-    color: #004080;
-}
-
-#services-overview .service p {
-    font-size: 1rem;
-    line-height: 1.5;
-} */
-
-.our_services{
-    background:     rgb(202, 225, 248); ;
+/* Services  */
+/* General Styles for Carousel */
+.carousel-inner {
+    padding: 2em;
 }
 
 .card {
-    flex: 0 0 auto;
-    width: 18rem;
-    margin: 10px;
+    margin: 0 0.5em;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border: none;
+    transition: transform 0.3s ease;
 }
 
-/* .carousel-item {
-    background:     rgb(80, 142, 204); ;
-} */
-
-#clients .clients-logos {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-}
-
-#clients .clients-logos img {
-    width: 150px;
-    height: auto;
-    margin: 10px;
-}
-
-#contact-info p {
-    font-size: 1.2rem;
-    text-align: center;
-}
-
-#contact-info .btn {
-    display: block;
-    width: 200px;
-    margin: 20px auto;
-    text-align: center;
-    background-color: #ffcc00;
-    color: #004080;
-    padding: 10px 20px;
-    text-decoration: none;
-    border-radius: 5px;
+.carousel-control-prev,
+.carousel-control-next {
+    background-color: #3498db; /* Softer blue */
+    width: 6vh;
+    height: 6vh;
+    border: none;
+    border-radius: 50%;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #fff; /* Ensures icons are white */
     transition: background-color 0.3s;
 }
 
+.carousel-control-prev:hover,
+.carousel-control-next:hover {
+    background-color: #2980b9; /* Darker shade of blue on hover */
+}
+
+/* Responsive and Flex Layout Changes */
+@media (min-width: 768px) {
+    .carousel-item {
+        margin-right: 0;
+        flex: 0 0 calc(100% / 3);
+        display: block;
+    }
+    .carousel-inner {
+        display: flex;
+    }
+}
+
+.card .img-wrapper {
+    max-width: 100%;
+    height: auto; /* Adjusted for better aspect ratio */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card img {
+    padding: 0;
+    max-height: 100%;
+    transition: transform 0.2s ease; /* Smooth scaling animation */
+}
+
+.card:hover img {
+    transform: scale(1.05); /* Slight zoom on hover */
+}
+
+@media (max-width: 767px) {
+    .card .img-wrapper {
+        height: auto; /* Responsive height */
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* General styles */
+.about {
+    padding: 40px 20px;
+    background-color: #f8f8f8;
+    text-align: center;
+  }
+  
+  .about-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  
+  /* Text styles */
+  .about-text {
+    flex: 1;
+    min-width: 300px;
+    max-width: 600px;
+    padding: 20px;
+    text-align: left;
+    animation: fadeInLeft 1s ease-out;
+  }
+  
+  .about-text h2 {
+    font-size: 2.5em;
+    margin-bottom: 10px;
+    color: #154161; /* Darker shade for better readability */
+  }
+  
+  .about-text h3 {
+    font-size: 1.5em;
+    color: #ef6602; /* Adds a pop of color */
+    margin-bottom: 20px;
+  }
+  
+  .about-text p {
+    font-size: 1em;
+    color: #333;
+    line-height: 1.6;
+    margin-bottom: 20px;
+  }
+  
+  .about-text button {
+    background-color: #ef6602; /* Changed to orange for better visibility */
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    font-size: 1em;
+    transition: background-color 0.3s;
+  }
+  
+  .about-text button:hover {
+    background-color: #cc5500; /* Darker shade of orange on hover */
+  }
+  
+  /* Image styles */
+  .about-image {
+    flex: 1;
+    min-width: 300px;
+    max-width: 600px;
+    padding: 20px;
+    animation: dropIn 1s ease-out;
+  }
+  
+  .about-image img {
+    width: 100%;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+  }
+  
+  /* Animations */
+  @keyframes dropIn {
+    from {
+      opacity: 0;
+      transform: translateY(-50px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
+  @keyframes fadeInLeft {
+    from {
+      opacity: 0;
+      transform: translateX(-50px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+  
+
+.social-media {
+  margin-top: 20px;
+}
+
+.social-media a {
+  margin: 0 10px;
+  display: inline-block;
+  font-size: 2em;
+}
+
+/* services  */
+
+
+
+#clients .clients-logos img {
+  width: 150px;
+  height: auto;
+  margin: 10px;
+}
+
+#contact-info p {
+  font-size: 1.2rem;
+  text-align: center;
+}
+
+#contact-info .btn {
+  display: block;
+  width: 200px;
+  margin: 20px auto;
+  text-align: center;
+  background-color: #ffcc00;
+  color: #004080;
+  padding: 10px 20px;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
 #contact-info .btn:hover {
-    background-color: #ff9900;
+  background-color: #ff9900;
 }
