--- a/style.css
+++ b/style.css
@@ -10,27 +10,37 @@ body {
   color: #333;
   background-color: #f9f7f7;
 } 
+
+
+.container h2 {
+  text-align: center;
+  font-size: 3em;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: #154161; /* Darker shade for better readability */
+}
+
+
    
-/* navigation  */
+/* ================================NAVIGATION ======================== */
 nav {
   height: 70px;
   top: 0;
-  background: #dbe2ef;
+  background: #ffffff;
   position: fixed;
   width: 100%;
   z-index: 1000;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  box-shadow: 0 2px 5px rgba(84, 126, 168, 0.5);
+  box-shadow: 0 2px 3px #3188ebfe
+  ;
 }
-
 nav .logo img {
   width: 70px;
   height: 100%;
-  padding-left: 10px;
+ 
 }
-
 nav ul {
   list-style: none;
   display: flex;
@@ -43,11 +53,11 @@ nav ul li {
 }
 
 nav .contact-info button {
-  background: #ef6602;
+  background: #4B91E3;
   border: none;
   margin-right: 10px; 
   padding: 10px 20px;
-  color: #154161;
+  color: #fff;
   cursor: pointer;
   border-radius: 5px;
   font-size: 1rem;
@@ -55,13 +65,11 @@ nav .contact-info button {
 }
 
 nav .contact-info button:hover {
-  background: #db5c01;
+  background: #3188eb;
 }
 
-
-
 nav ul li a {
-    color: #154161;
+    color: #3D3E3B;
     text-decoration: none;
     font-size: 1.1rem;
     transition: color 0.3s, text-decoration 0.3s;  /* Include text-decoration in the transition for smooth effect */
@@ -70,11 +78,10 @@ nav ul li a {
 }
 
  nav ul li a:hover {
-    color: #154161;
+    color: #3D3E3B;
     text-decoration: none;  /* Ensures that no default text underline is applied */
 }  
 
-/* Add after pseudo-element for the underline effect on hover */
 nav ul li a:hover:after {
     content: '';  /* Necessary to generate the box */
     position: absolute;
@@ -82,31 +89,15 @@ nav ul li a:hover:after {
     left: 0;
     width: 100%;  /* Ensures the underline covers the full width of the text */
     height: 2px;  /* Height of the underline */
-    background-color: #ef6602;  /* Color of the underline */
+    background-color: #4B91E3;  /* Color of the underline */
     transition: width 0.3s;  /* Smooth transition for the underline */
 }
 
 
-/* Nothing To do Above  */
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* Header  */
+/* ================================HEADER =================== */
 header .hero {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("images/silder2.jpg") no-repeat center center/cover;
+  background: linear-gradient(#2c7bfe, rgba(180, 178, 178, 0.5)), url("images/silder2.jpg") no-repeat center center/cover;
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -116,7 +107,7 @@ header .hero {
 }
 
 header .hero .overlay {
-  background-color: rgba(72, 94, 109, 0.8);
+  background-color: #e1f7fa7b;
   text-align: center;
   height: 100%;
   width: 100%;
@@ -140,7 +131,7 @@ header .overlay h1 .underline::after {
   bottom: -10px;
   width: 0%; /* Start with no underline visible */
   height: 4px; /* Thicker underline */
-  background-color: #ef6602; /* Orange color for underline */
+  background-color: #3188eb; /* Orange color for underline */
   transition: width 0.5s ease; /* Smooth transition for the underline */
 }
 
@@ -155,7 +146,10 @@ header .hero .overlay h1 {
 }
 
 header .hero .overlay p {
-  font-size: 1.5rem;
+  font-size: 1.5em;
+  border-bottom: #154161 solid 1px ;
+  padding: 5px;
+  
 }
 
 header .hero .cta-buttons {
@@ -163,7 +157,7 @@ header .hero .cta-buttons {
 }
 
 header .hero .cta-buttons .btn {
-  background-color: #154161; /* Dark blue for buttons */
+  background-color: #3188eb; /* Dark blue for buttons */
   color: #fff; /* White text for better readability */
   padding: 10px 20px;
   text-decoration: none;
@@ -173,105 +167,12 @@ header .hero .cta-buttons .btn {
 }
 
 header .hero .cta-buttons .btn:hover {
-  background-color: #ef6602; /* Orange color on hover */
+  background-color: #2081ef; /* Orange color on hover */
   transform: translateY(-2px); /* Slight lift effect on hover */
 }
 
 
-
-  .container h2 {
-    text-align: center;
-  }
-
-/* Services  */
-/* General Styles for Carousel */
-.carousel-inner {
-    padding: 2em;
-}
-
-.card {
-    margin: 0 0.5em;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border: none;
-    transition: transform 0.3s ease;
-}
-
-.carousel-control-prev,
-.carousel-control-next {
-    background-color: #3498db; /* Softer blue */
-    width: 6vh;
-    height: 6vh;
-    border: none;
-    border-radius: 50%;
-    top: 50%;
-    transform: translateY(-50%);
-    color: #fff; /* Ensures icons are white */
-    transition: background-color 0.3s;
-}
-
-.carousel-control-prev:hover,
-.carousel-control-next:hover {
-    background-color: #2980b9; /* Darker shade of blue on hover */
-}
-
-/* Responsive and Flex Layout Changes */
-@media (min-width: 768px) {
-    .carousel-item {
-        margin-right: 0;
-        flex: 0 0 calc(100% / 3);
-        display: block;
-    }
-    .carousel-inner {
-        display: flex;
-    }
-}
-
-.card .img-wrapper {
-    max-width: 100%;
-    height: auto; /* Adjusted for better aspect ratio */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.card img {
-    padding: 0;
-    max-height: 100%;
-    transition: transform 0.2s ease; /* Smooth scaling animation */
-}
-
-.card:hover img {
-    transform: scale(1.05); /* Slight zoom on hover */
-}
-
-@media (max-width: 767px) {
-    .card .img-wrapper {
-        height: auto; /* Responsive height */
-    }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* General styles */
+/* ==========================OUR MISSION ===================== */
 .about {
     padding: 40px 20px;
     background-color: #f8f8f8;
@@ -279,45 +180,58 @@ header .hero .cta-buttons .btn:hover {
   }
   
   .about-container {
+    /* height: 85vh; */
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    max-width: 1200px;
+    /* max-width: 1200px; */
     margin: 0 auto;
   }
   
+
+
+
+
+
+
+
+
+
+
+
   /* Text styles */
   .about-text {
     flex: 1;
-    min-width: 300px;
-    max-width: 600px;
+    min-width: 400px;
+    max-width: 800px;
     padding: 20px;
     text-align: left;
     animation: fadeInLeft 1s ease-out;
   }
   
   .about-text h2 {
-    font-size: 2.5em;
+    font-size: 3em;
+    font-weight: bold;
     margin-bottom: 10px;
     color: #154161; /* Darker shade for better readability */
   }
   
   .about-text h3 {
-    font-size: 1.5em;
-    color: #ef6602; /* Adds a pop of color */
+    font-size: 2.5em;
+    color: #2081ef; /* Adds a pop of color */
     margin-bottom: 20px;
   }
   
   .about-text p {
-    font-size: 1em;
+    font-size: 1.2em;
     color: #333;
     line-height: 1.6;
     margin-bottom: 20px;
   }
   
   .about-text button {
-    background-color: #ef6602; /* Changed to orange for better visibility */
+    background-color: #3188eb; /* Changed to orange for better visibility */
     color: white;
     padding: 10px 20px;
     border: none;
@@ -327,14 +241,15 @@ header .hero .cta-buttons .btn:hover {
   }
   
   .about-text button:hover {
-    background-color: #cc5500; /* Darker shade of orange on hover */
+    background-color: #2081ef; /* Darker shade of orange on hover */
   }
   
-  /* Image styles */
+ 
   .about-image {
+ 
     flex: 1;
-    min-width: 300px;
-    max-width: 600px;
+    min-width: 400px;
+    max-width: 800px;
     padding: 20px;
     animation: dropIn 1s ease-out;
   }
@@ -342,7 +257,7 @@ header .hero .cta-buttons .btn:hover {
   .about-image img {
     width: 100%;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.311); /* Subtle shadow for depth */
   }
   
   /* Animations */
@@ -367,27 +282,246 @@ header .hero .cta-buttons .btn:hover {
       transform: translateX(0);
     }
   }
+
+
+
+/* =========================Facts=========== */
+.wrapper {
+position: relative;
+  width: 80vw;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 10px;
+}
+.facts {
+  width: 28vmin;
+  height: 28vmin;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding: 1em 0;
+  position: relative;
+  font-size: 16px;
+  border-radius: 0.5em;
+  background-color: transparent;
+
+}
+.facts_icon {
+  color: #ffffff;
+  font-size: 2.5em;
+  text-align: center;
+}
+span.num {
+  color: #154161;
+  display: grid;
+  place-items: center;
+  font-weight: 600;
+  font-size: 3em;
+}
+span.text {
+  color: #ffffff;
+  font-size: 1em;
+  text-align: center;
+  pad: 0.7em 0;
+  font-weight: 600;
+  line-height: 0;
+}
+@media screen and (max-width: 1024px) {
+  .wrapper {
+    width: 85vw;
+  }
+  .facts {
+    height: 26vmin;
+    width: 26vmin;
+    font-size: 12px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .wrapper {
+    width: 90vw;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+  .facts {
+    width: calc(50% - 40px);
+    height: 30vmin;
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .wrapper {
+    gap: 15px;
+  }
+  .facts{
+    width: 100%;
+    height: 25vmin;
+    font-size: 8px;
+  }
+}
+
+
+.facts_section  {
+  width: 100%;
+  display: grid;
+  background-color: #2c7bfe;
+
+}
+
+
+
+  /* ===========================Our Services==================  */
+  .sevices_section, .facts_section  {
+    width: 100%;
+    display: grid;
   
+ 
+  }
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .column {
+    width: 100%;
+    padding: 0 1em 1em 1em;
+    text-align: center;
+  }
+  .card {
+    width: 100%;
+    height: 100%;
+    padding: 1.5em 1em;
+    background: linear-gradient(#ffffff 50%, #2c7bfe 50%);
+    background-size: 100% 200%;
+    background-position: 0 2.5%;
+    border-radius: 5px;
+    box-shadow: 0 0 35px rgba(0, 0, 0, 0.12);
+    cursor: pointer;
+    transition: 0.5s;
+  }
+  h3 {
+    font-size: 17px;
+    font-weight: 600;
+    color: #1f194c;
+    margin: 1em 0;
+  }
+  p {
+    color: #575a7b;
+    font-size: 13px;
+    line-height: 1.5;
+    letter-spacing: 0.03em;
+  }
+  .icon-wrapper {
+    background-color: #2c7bfe;
+    position: relative;
+    margin: auto;
+    font-size: 30px;
+    height: 1.5em;
+    width: 1.5em;
+    color: #ffffff;
+    border-radius: 50%;
+    display: grid;
+    place-items: center;
+    transition: 0.5s;
+  }
+  .card:hover {
+    background-position: 0 100%;
+  }
+  .card:hover .icon-wrapper {
+    background-color: #ffffff;
+    color: #2c7bfe;
+  }
+  .card:hover h3 {
+    color: #ffffff;
+  }
+  .card:hover p {
+    color: #f0f0f0;
+  }
+  @media screen and (min-width: 768px) {
+    .services_section {
+      padding: 0 2em;
+    }
+    .column {
+      flex: 0 50%;
+      max-width: 50%;
+    }
+  }
+  @media screen and (min-width: 992px) {
+    section {
+      padding: 1em 3em;
+    }
+    .column {
+      flex: 0 0 33.33%;
+      max-width: 33.33%;
+    }
+  }
+  
+  /* ===========================Our Clients ==================  */
 
-.social-media {
-  margin-top: 20px;
+
+
+@keyframes slide {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100%);
+  }
 }
 
-.social-media a {
-  margin: 0 10px;
+.logos {
+  height: 50vh;
+  overflow: hidden;
+display: flex;
+justify-content: center;
+align-items: center;
+  background: transparent;
+  white-space: nowrap;
+  position: relative;
+}
+
+.logos:before,
+.logos:after {
+  position: absolute;
+  top: 0;
+  width: 250px;
+  height: 100%;
+  content: "";
+  z-index: 2;
+}
+
+.logos:before {
+  left: 0;
+  background: linear-gradient(to left, rgba(255, 255, 255, 0), #3d87ff);
+}
+
+.logos:after {
+  right: 0;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0), #3d87ff);
+}
+
+.logos:hover .logos-slide {
+  animation-play-state: paused;
+}
+
+.logos-slide {
   display: inline-block;
-  font-size: 2em;
+  animation: 35s slide infinite linear;
 }
 
-/* services  */
-
-
-
-#clients .clients-logos img {
-  width: 150px;
-  height: auto;
-  margin: 10px;
+.logos-slide img {
+  height: 3em;
+  margin: 0 40px;
 }
+
+
+
+
+
+
+
 
 #contact-info p {
   font-size: 1.2rem;
@@ -409,4 +543,16 @@ header .hero .cta-buttons .btn:hover {
 
 #contact-info .btn:hover {
   background-color: #ff9900;
+}
+
+
+
+.social-media {
+  margin-top: 20px;
+}
+
+.social-media a {
+  margin: 0 10px;
+  display: inline-block;
+  font-size: 2em;
 }
