--- a/style/style.css
+++ b/style/style.css
@@ -6,24 +6,23 @@ body {
   font-family: Arial, sans-serif;
   margin: 70px 0 0 0;
   padding: 0;
-
   color: #333;
   background-color: #f9f7f7;
 } 
 
 
-.container h2 {
+.container1 h2 {
   text-align: center;
-  font-size: 3em;
+  font-size: 2em;
   font-weight: bold;
-  margin-bottom: 10px;
+  /* margin: 0px; */
   color: #154161; /* Darker shade for better readability */
 }
 
 
    
 /* ================================NAVIGATION ======================== */
-nav {
+.nav {
   height: 70px;
   top: 0;
   background: #ffffff;
@@ -97,7 +96,7 @@ nav ul li a:hover:after {
 
 /* ================================HEADER =================== */
 header .hero {
-  background: linear-gradient(#2c7bfe, rgba(180, 178, 178, 0.5)), url("images/silder2.jpg") no-repeat center center/cover;
+  background: linear-gradient(#2c7bfe, rgba(180, 178, 178, 0.5)), url("/Tilal_Sharqiyah_Trading_Website/images/slider1.jpg") no-repeat center center/cover;
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -147,9 +146,15 @@ header .hero .overlay h1 {
 
 header .hero .overlay p {
   font-size: 1.5em;
-  border-bottom: #154161 solid 1px ;
+  /* border-bottom: #154161 solid 1px ; */
   padding: 5px;
   
+}
+
+#typed-text{
+  font-weight: bold;
+  color:#2c7bfe ;
+
 }
 
 header .hero .cta-buttons {
@@ -210,12 +215,13 @@ header .hero .cta-buttons .btn:hover {
     animation: fadeInLeft 1s ease-out;
   }
   
-  .about-text h2 {
+  /* .about-text h2 {
     font-size: 3em;
     font-weight: bold;
-    margin-bottom: 10px;
-    color: #154161; /* Darker shade for better readability */
-  }
+    /* margin-bottom: 0px; */
+    /* color: #154161; */
+     /* Darker shade for better readability */
+  /* }  */
   
   .about-text h3 {
     font-size: 2.5em;
@@ -248,17 +254,42 @@ header .hero .cta-buttons .btn:hover {
   .about-image {
  
     flex: 1;
-    min-width: 400px;
-    max-width: 800px;
+    min-width: 200px;
+    max-width: 600px;
     padding: 20px;
     animation: dropIn 1s ease-out;
   }
   
   .about-image img {
     width: 100%;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.311); /* Subtle shadow for depth */
+    border-radius: 20px;
   }
+  
+  .about-image {
+    position: relative;
+     width: 100%;
+    height: 300px;  
+     /* Adjust based on your design requirements */
+    overflow: hidden;
+  }
+  
+  .about-image img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: opacity 1s ease-in-out;
+    opacity: 0;
+  }
+  
+  .about-image img.active {
+    opacity: 1;
+  }
+  
+
+
   
   /* Animations */
   @keyframes dropIn {
@@ -287,6 +318,7 @@ header .hero .cta-buttons .btn:hover {
 
 /* =========================Facts=========== */
 .wrapper {
+  /* height: 85vh; */
 position: relative;
   width: 80vw;
   transform: translate(-50%, -50%);
@@ -310,20 +342,18 @@ position: relative;
   background-color: transparent;
 
 }
-.facts_icon {
-  color: #ffffff;
-  font-size: 2.5em;
-  text-align: center;
-}
+
 span.num {
-  color: #154161;
+  color: #ffffff;
+
   display: grid;
   place-items: center;
   font-weight: 600;
   font-size: 3em;
 }
 span.text {
-  color: #ffffff;
+ color: #154161;
+
   font-size: 1em;
   text-align: center;
   pad: 0.7em 0;
@@ -357,7 +387,7 @@ span.text {
     gap: 15px;
   }
   .facts{
-    width: 100%;
+    /* width: 10%; */
     height: 25vmin;
     font-size: 8px;
   }
@@ -365,7 +395,9 @@ span.text {
 
 
 .facts_section  {
-  width: 100%;
+
+  /* height: 85vh; */
+  width: 80vw;
   display: grid;
   background-color: #2c7bfe;
 
@@ -407,7 +439,7 @@ span.text {
     color: #1f194c;
     margin: 1em 0;
   }
-  p {
+  .card_data {
     color: #575a7b;
     font-size: 13px;
     line-height: 1.5;
@@ -439,6 +471,12 @@ span.text {
   .card:hover p {
     color: #f0f0f0;
   }
+
+  .sevices_section{
+padding: 40px 20px;
+text-align: center;
+
+  } 
   @media screen and (min-width: 768px) {
     .services_section {
       padding: 0 2em;
@@ -449,9 +487,9 @@ span.text {
     }
   }
   @media screen and (min-width: 992px) {
-    section {
+    /* section {
       padding: 1em 3em;
-    }
+    } */
     .column {
       flex: 0 0 33.33%;
       max-width: 33.33%;
@@ -472,7 +510,8 @@ span.text {
 }
 
 .logos {
-  height: 50vh;
+  height: 
+  30vh;
   overflow: hidden;
 display: flex;
 justify-content: center;
@@ -523,36 +562,208 @@ align-items: center;
 
 
 
-#contact-info p {
-  font-size: 1.2rem;
-  text-align: center;
+
+
+
+
+
+
+
+
+/* ===========Contact========= */
+.container_contact {
+  background-color: #dce9f7;
+  /* max-width: 1200px; */
+  /* margin: 0 auto; */
+  padding: 40px 20px;
+  box-sizing: border-box;
 }
 
-#contact-info .btn {
+h2 {
+  text-align: center;
+  /* margin-bottom: 20px; */
+}
+
+.contact-content {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.contact-details, .contact-form {
+  flex: 1;
+  min-width: 300px; /* Ensures responsiveness on smaller devices */
+}
+
+.contact-details{
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  justify-content: center;
+}
+ .contact_caption, p{
+  /* text-align: center; */
+  font-size: 1em;
+
+}
+.contact_icon{
+  color: #007bff;
+}
+
+.contact-form {
+  background: #f9f9f9;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.contact-form .form-group {
+  margin-bottom: 15px;
+}
+
+.contact-form label {
   display: block;
-  width: 200px;
-  margin: 20px auto;
-  text-align: center;
-  background-color: #ffcc00;
-  color: #004080;
+  color: #007bff;
+  margin-bottom: 5px;
+}
+
+.contact-form input, .contact-form textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #007bff
+  ;
+  border-radius: 4px;
+}
+
+.contact-form button {
+  background: #007bff;
+  color: #fff;
   padding: 10px 20px;
-  text-decoration: none;
-  border-radius: 5px;
-  transition: background-color 0.3s;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
-
-#contact-info .btn:hover {
-  background-color: #ff9900;
-}
-
 
 
 .social-media {
-  margin-top: 20px;
+  text-align: center;
+  padding: 20px 0  ;
+}
+.social-media a {
+  margin-right: 10px;
+  font-size: 24px;
+  text-decoration: none;
 }
 
-.social-media a {
-  margin: 0 10px;
+
+.btn {
   display: inline-block;
-  font-size: 2em;
+  padding: 10px 20px;
+  background: #007bff;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 4px;
+  transition: background 0.3s ease;
+}
+
+.contact-details h3{
+  text-align: center;
+  color: #007bff;
+}
+
+.btn:hover {
+  background: #0056b3;
+}
+
+
+
+/* Testimonials  */
+
+/* Testimonials */
+.testi_section {
+  /* height: 92vh; */
+  padding: 40px 20px;
+  background-color: #ffffff;
+  text-align: center;
+}
+
+.testimonials-container {
+  position: relative;
+  overflow: hidden;
+  width: 80%;
+  margin: auto;
+}
+
+.testimonial-slide {
+  display: flex;
+  transition: transform 0.5s ease;
+}
+
+
+.testimonial {
+  display: flex;
+  min-width: 100%;
+  box-sizing: border-box;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin: 20px 0;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 20px;
+}
+
+.testimonial img {
+  object-fit: cover;
+  width: 100px; /* Adjust the size as needed */
+  height: 100px; /* Adjust the size as needed */
+  border-radius: 50%;
+  margin-bottom: 20px;
+  border: 3px dotted  #4b91e3;
+}
+
+.testimonial p {
+  font-size: 1.2em;
+  line-height: 1.6;
+  color: #333;
+}
+.quote{
+  color: #4b91e3;
+}
+.testimonial h3 {
+  font-size: 1.1em;
+  color: #4b91e3;
+  margin-top: 10px;
+}
+
+.testimonial-controls {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.testimonial-controls span {
+  cursor: pointer;
+  padding: 20px;
+  font-size: 2.5em;
+  user-select: none;
+  color: #4b91e3;
+  transition: color 0.3s;
+}
+
+.testimonial-controls span:hover {
+  color: #3188eb;
+}
+footer p{
+  width: 100%;
+
+  padding: 15px;
+  text-align: center;
+  margin: 0;
+  color: white;
+  background-color: #282828
+
+  ;
 }
