--- a/style.css
+++ b/style.css
@@ -566,22 +566,25 @@ align-items: center;
 }
 
 .logos-slide ,.products-slide {
-  display: inline-block;
-  animation: 35s slide infinite linear;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  /* display: inline-block; */
+  animation: 30s slide infinite linear;
 
 }
 
 .logos-slide img {
-  height: 5em;
-  width: 10em;
+  
+
+  height: auto;
+  width: 12em;
   margin: 0 40px;
 }
 
 
-.products-slide {
-  display: flex;
 
-}
 
 
 
